2012-09-14  David Edelsohn  <dje.gcc@gmail.com>

	* configure: Regenerate.

2012-09-11  Molly Heidecker  <tworoses1@gmail.com>

	PR gprof/13836
	* fsf_callg_bl.m: Fix typo.

2012-09-10  H.J. Lu  <hongjiu.lu@intel.com>

	* configure: Regenerated.

2012-08-09  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated Vietnamese translation.

2012-08-07  Nick Clifton  <nickc@redhat.com>

	* po/ja.po: Updated Japanese translation.

2012-07-30  Nick Clifton  <nickc@redhat.com>

	* po/gprof.pot: Updated template.
	* po/bg.po: Updated Bulgarian translation.
	* po/es.po: Updated Spanish translation.

2012-07-29  Alan Modra  <amodra@gmail.com>

	* gprof.h: Don't include gconfig.h twice.  Undef conflicting
	PACKAGE_* defines.

2012-07-27  Mike Frysinger  <vapier@gentoo.org>

	* configure.in (BFD_VERSION): Run bfd/configure --version and
	parse the output of that.
	* configure: Regenerate.

2012-06-02  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.am (TEXINFO_TEX): Remove $(top_srcdir) prefix.
	* Makefile.in: Regenerate.

2012-03-06  Tristan Gingold  <gingold@adacore.com>

	* corefile.c (core_create_function_syms): Do not call bsearch if
	symbol_map_count is 0.

2012-02-06  Nick Clifton  <nickc@redhat.com>

	* po/sr.po: New Serbian translation.
	* configure.in (ALL_LINGUAS): Add sr.
	* configure: Regenerate.

For older changes see ChangeLog-2011

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: